Fix Alpine musl Py3.13 linking for _tgvoip (link Python3::Module)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,7 +36,7 @@ add_definitions(
 )
 
 add_subdirectory(3rdparty/pybind11)
-find_package(Python3 REQUIRED COMPONENTS Development.Module)
+find_package(Python3 REQUIRED COMPONENTS Development)
 include_directories(${TGVOIP_INCLUDE_DIR})
 
 if(WIN32)
@@ -69,7 +69,7 @@ pybind11_add_module(_tgvoip ${SOURCES})
 target_link_libraries(_tgvoip PRIVATE
     lib_tgvoip
     pybind11::module
-    Python3::Module
+    Python3::Python
 )
 if ((CMAKE_CXX_COMPILER_ID STREQUAL GNU) AND NOT (CMAKE_CXX_COMPILER_VERSION VERSION_LESS 9))
     target_compile_options(_tgvoip PRIVATE
